--- a/wercker.yml
+++ b/wercker.yml
@@ -37,6 +37,7 @@ build:
 # This pipeline needs DOCKER_USERNAME and DOCKER_PASSWORD variables set.
 push-to-registry:
   docker: true
+  box: alpine
   steps:
     - script:
         name: Setup image tags
