updated helm chart to reflect api env config

--- a/deploy/helm-chart/mushop/charts/api/templates/api-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/api/templates/api-deployment.yaml
@@ -38,6 +38,8 @@ spec:
             value: http://{{ .Release.Name }}-carts
           - name: USERS_URL
             value: http://{{ .Release.Name }}-user
+          - name: STATIC_MEDIA_URL
+            value: "{{ .Values.env.mediaUrl }}"
           livenessProbe:
             httpGet:
               path: /health
