updated k8s manifests with placeholder cdn

--- a/deploy/kubernetes/mushop.yaml
+++ b/deploy/kubernetes/mushop.yaml
@@ -94,6 +94,8 @@ spec:
           value: http://carts
         - name: USERS_URL
           value: http://user
+        - name: STATIC_MEDIA_URL
+          value:
         resources:
           limits:
             cpu: 300m
