--- a/src/user/package.json
+++ b/src/user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user",
+  "name": "mushop-user-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,9 +22,11 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/typeorm": "^6.1.3",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "typeorm": "^0.2.18"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
