--- a/wercker.yml
+++ b/wercker.yml
@@ -151,74 +151,7 @@ push-to-registry:
           IMAGE_NAMES_FILE=images.txt
           echo ${SERVICE_NAME_UPPER}_IMAGE_NAME=${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}/$SERVICE_NAME >> ${IMAGE_NAMES_FILE}
           echo ${SERVICE_NAME_UPPER}_IMAGE_TAG=$(cat src/${SERVICE_NAME}/VERSION) >> ${IMAGE_NAMES_FILE}
-
-      # CARTS_VERSION=$(cat src/carts/VERSION)
-      # ./ci/push.sh $DOCKER_REPOSITORY/carts $CARTS_VERSION
-
-      # CATALOGUE_VERSION=$(cat src/catalogue/VERSION)
-      # ./ci/push.sh $DOCKER_REPOSITORY/catalogue $CATALOGUE_VERSION
-
-      # ORDERS_VERSION=$(cat src/orders/VERSION)
-      # ./ci/push.sh $DOCKER_REPOSITORY/orders $ORDERS_VERSION
-
-      # PAYMENT_VERSION=$(cat src/payment/VERSION)
-      # ./ci/push.sh $DOCKER_REPOSITORY/payment $PAYMENT_VERSION
-
-      # SHIPPING_VERSION=$(cat src/shipping/VERSION)
-      # ./ci/push.sh $DOCKER_REPOSITORY/shipping $SHIPPING_VERSION
-
-      # STOREFRONT_VERSION=$(cat src/storefront/VERSION)
-      # ./ci/push.sh $DOCKER_REPOSITORY/storefront $STOREFRONT_VERSION
-
-      # STREAM_VERSION=$(cat src/stream/VERSION)
-      # ./ci/push.sh $DOCKER_REPOSITORY/stream $STREAM_VERSION
-
-      # USER_VERSION=$(cat src/user/VERSION)
-      # ./ci/push.sh $DOCKER_REPOSITORY/user $USER_VERSION
-    # - script:
-    #     name: Store image names
-    #     code: |
-    #       IMAGE_NAMES_FILE=images.txt
-    #       echo API_IMAGE_NAME=${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}/api >> ${IMAGE_NAMES_FILE}
-    #       echo API_IMAGE_TAG=$(cat src/api/VERSION) >> ${IMAGE_NAMES_FILE}
-    #       echo CARTS_IMAGE_NAME=${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}/carts >> ${IMAGE_NAMES_FILE}
-    #       echo CARTS_IMAGE_TAG=$(cat src/carts/VERSION) >> ${IMAGE_NAMES_FILE}
-    #       echo CATALOGUE_IMAGE_NAME=${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}/catalogue >> ${IMAGE_NAMES_FILE}
-    #       echo CATALOGUE_IMAGE_TAG=$(cat src/catalogue/VERSION) >> ${IMAGE_NAMES_FILE}
-    #       echo ORDERS_IMAGE_NAME=${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}/orders >> ${IMAGE_NAMES_FILE}
-    #       echo ORDERS_IMAGE_TAG=$(cat src/orders/VERSION) >> ${IMAGE_NAMES_FILE}
-    #       echo PAYMENT_IMAGE_NAME=${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}/payment >> ${IMAGE_NAMES_FILE}
-    #       echo PAYMENT_IMAGE_TAG=$(cat src/payment/VERSION) >> ${IMAGE_NAMES_FILE}
-    #       echo SHIPPING_IMAGE_NAME=${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}/shipping >> ${IMAGE_NAMES_FILE}
-    #       echo SHIPPING_IMAGE_TAG=$(cat src/shipping/VERSION) >> ${IMAGE_NAMES_FILE}
-    #       echo STOREFRONT_IMAGE_NAME=${DOCKER_REGISTRY}/${REPOSITORY}/storefront >> ${IMAGE_NAMES_FILE}
-    #       echo STOREFRONT_IMAGE_TAG=$(cat src/storefront/VERSION) >> ${IMAGE_NAMES_FILE}
-    #       echo STREAM_IMAGE_NAME=${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}/stream >> ${IMAGE_NAMES_FILE}
-    #       echo STREAM_IMAGE_TAG=$(cat src/stream/VERSION) >> ${IMAGE_NAMES_FILE}
-    #       echo USER_IMAGE_NAME=${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}/user >> ${IMAGE_NAMES_FILE}
-    #       echo USER_IMAGE_TAG=$(cat src/user/VERSION) >> ${IMAGE_NAMES_FILE}
-    #       cat $IMAGE_NAMES_FILE
-
-test-go-services:
-  box: golang:1.12
-  steps:
-    - script:
-      name: Run tests for Go services
-      code: |
-        # cd src
-
-        # cd catalogue
-        # go test -v ./...
-        # cd ..
-
-        # cd user 
-        # # TODO: Enable once MongoDB is mocked/replaced with ATP
-        # # go test -v ./...
-        # cd ..
-
-        # cd payment
-        # go test -v ./...
-        # cd ..
+          cat $IMAGE_NAMES_FILE
 
 upgrade-deployment:
   box:
@@ -235,6 +168,9 @@ upgrade-deployment:
         name: Setup image names
         code: |
           cat images.txt
+          ls -a
+          cat push-api/images.txt
+          cat push-carts/images.txt
           export $(cat images.txt | xargs)
     - script:
         name: Create kube.config file
