--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -1,14 +1,13 @@
-version: '2'
+version: "2"
 
 services:
-
   # Edge router application entrypoint
   edge-router:
     image: phx.ocir.io/intvravipati/mushop/edge-router:1
     hostname: edge-router
     restart: always
     ports:
-      - '80:80'
+      - "80:80"
     cap_drop:
       - all
     cap_add:
@@ -19,7 +18,7 @@ services:
 
   # Storefront application middleware
   api:
-    image: phx.ocir.io/intvravipati/mushop/api:1
+    image: phx.ocir.io/intvravipati/mushop/api:1.1.0
     hostname: api
     restart: always
     cap_drop:
@@ -57,7 +56,7 @@ services:
 
   # Storefront backend API service
   storefront:
-    image: phx.ocir.io/intvravipati/mushop/storefront:1
+    image: phx.ocir.io/intvravipati/mushop/storefront:1.0.8
     hostname: storefront
     restart: always
     cap_drop:
@@ -79,21 +78,21 @@ services:
     hostname: catalogue
     restart: always
     cap_drop:
-        - all
+      - all
     cap_add:
-        - NET_BIND_SERVICE
+      - NET_BIND_SERVICE
     read_only: true
     environment:
-        - reschedule=on-node-failure
-        - OADB_USER=catalogue_user
-        - OADB_PW=default_Password1
-        - OADB_SERVICE=mcatalogue_tp
-  
-  # OCI Carts service        
+      - reschedule=on-node-failure
+      - OADB_USER=catalogue_user
+      - OADB_PW=default_Password1
+      - OADB_SERVICE=mcatalogue_tp
+
+  # OCI Carts service
   carts:
-    image: phx.ocir.io/intvravipati/mushop/carts:1.0
+    image: phx.ocir.io/intvravipati/mushop/carts:1.0.1
     ports:
-     - 8086:80
+      - 8086:80
     hostname: carts
     restart: always
     cap_drop:
@@ -108,12 +107,12 @@ services:
       - OADB_PW=Default_Password123#
       - OADB_SERVICE=mcarts_tp
       - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.mushop.carts=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
-  
+
   # OCI Orders service
   orders:
-    image: phx.ocir.io/intvravipati/mushop/orders:1.0
+    image: phx.ocir.io/intvravipati/mushop/orders:1.0.2
     ports:
-     - 8085:80
+      - 8085:80
     hostname: orders
     restart: always
     cap_drop:
@@ -131,7 +130,7 @@ services:
 
   # Shipping service
   shipping:
-    image: phx.ocir.io/intvravipati/mushop/shipping:0.0.4
+    image: phx.ocir.io/intvravipati/mushop/shipping:1.0.0
     hostname: shipping
     restart: always
     cap_drop:
@@ -149,7 +148,7 @@ services:
       - OCI_USER_ID
       - OCI_FINGERPRINT
       - OCI_API_KEY
-  
+
   # OCI Stream
   stream:
     image: phx.ocir.io/intvravipati/mushop/stream:0.0.1
@@ -168,7 +167,7 @@ services:
       - OCI_USER_ID
       - OCI_FINGERPRINT
       - OCI_API_KEY
-      
+
   payment:
     image: phx.ocir.io/intvravipati/mushop/payment:0.0.1
     hostname: payment
