--- a/src/catalogue/docker/docker-compose.yml
+++ b/src/catalogue/docker/docker-compose.yml
@@ -1,3 +1,8 @@
+#
+# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
+# 
+
 version: '2'
 
 services:
