--- a/deploy/monolith-lite/Dockerfile
+++ b/deploy/monolith-lite/Dockerfile
@@ -1,3 +1,8 @@
+#
+# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
+# 
+
 ##### Oracle Instant Client version
 ARG oracleClientVersion=19.3
 
