--- a/src/storefront/package.json
+++ b/src/storefront/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mushop-storefront",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "MuShop eCommerce demo",
   "scripts": {
     "start": "gulp",
@@ -32,6 +32,7 @@
     "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
+    "gulp-header": "^2.0.9",
     "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^7.0.1",
